re-run Notebook

--- a/docs/datasets/Richter17_Galactic_CGM.ipynb
+++ b/docs/datasets/Richter17_Galactic_CGM.ipynb
@@ -41,7 +41,7 @@
      "data": {
       "text/html": [
        "&lt;Table length=5&gt;\n",
-       "<table id=\"table139684086940504\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140522529793584\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>_RAJ2000</th><th>_DEJ2000</th><th>No</th><th>Name</th><th>GLON</th><th>GLAT</th><th>SimbadName</th><th>_RA_icrs</th><th>_DE_icrs</th></tr></thead>\n",
        "<thead><tr><th>deg</th><th>deg</th><th></th><th></th><th>deg</th><th>deg</th><th></th><th>deg</th><th>deg</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>float64</th><th>int16</th><th>str27</th><th>float32</th><th>float32</th><th>str25</th><th>float64</th><th>float64</th></tr></thead>\n",
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "&lt;Table masked=True length=20&gt;\n",
-       "<table id=\"table139683128108256\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140522526851144\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>No</th><th>Name</th><th>Ion</th><th>lambda0</th><th>S_N</th><th>vmin</th><th>vmax</th><th>Flag</th><th>W</th><th>e_W</th><th>l_logN</th><th>logN</th><th>e_logN</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th>0.1nm</th><th></th><th>km / s</th><th>km / s</th><th></th><th>0.1pm</th><th>0.1pm</th><th></th><th>[cm/2]</th><th>[cm/2]</th></tr></thead>\n",
        "<thead><tr><th>int16</th><th>str27</th><th>str5</th><th>float32</th><th>int16</th><th>int16</th><th>int16</th><th>str1</th><th>int16</th><th>int16</th><th>str1</th><th>float32</th><th>float32</th></tr></thead>\n",
@@ -139,7 +139,7 @@
        "   20             RBS1892 CIV    1548.2    17 ...    10          13.04    0.19"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
      "data": {
       "text/html": [
        "&lt;Table masked=True length=1049&gt;\n",
-       "<table id=\"table139683141443144\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140522526817192\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>No</th><th>Name</th><th>Ion</th><th>lambda0</th><th>S_N</th><th>vmin</th><th>vmax</th><th>Flag</th><th>W</th><th>e_W</th><th>l_logN</th><th>logN</th><th>e_logN</th><th>RA</th><th>DEC</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th>0.1nm</th><th></th><th>km / s</th><th>km / s</th><th></th><th>0.1pm</th><th>0.1pm</th><th></th><th>[cm/2]</th><th>[cm/2]</th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>int16</th><th>str27</th><th>str5</th><th>float32</th><th>int16</th><th>int16</th><th>int16</th><th>str1</th><th>int16</th><th>int16</th><th>str1</th><th>float32</th><th>float32</th><th>float64</th><th>float64</th></tr></thead>\n",
@@ -330,7 +330,21 @@
       "  /home/xavier/local/Python/linetools/linetools/lists/sets/llist_v1.2.ascii\n",
       "Loading abundances from Asplund2009\n",
       "Abundances are relative by number on a logarithmic scale with H=12\n",
-      "Loading Richter+17 for CII, CIV, SiII, SiIII\n",
+      "Loading Richter+17 for CII, CIV, SiII, SiIII\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:731: UserWarning: Absline <AbsLine: SiII 1193, z=0.0000 wrest=1193.2897 Angstrom, f=0.582> has flag=0.  Hopefully you expected that\n",
+      "  warnings.warn(\"Absline {} has flag=0.  Hopefully you expected that\".format(str(aline)))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "read_sets: Using set file -- \n",
       "  /home/xavier/local/Python/linetools/linetools/lists/sets/llist_v1.2.ascii\n"
      ]
@@ -397,29 +411,73 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "SiII_tbl = mwcgm.abs.ion_tbl((14,2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "&lt;Table masked=True length=20&gt;\n",
+       "<table id=\"table140522500131248\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>abssys_name</th><th>b_gal</th><th>l_gal</th><th>comp_name</th><th>Z</th><th>ion</th><th>Ej</th><th>vmin</th><th>vmax</th><th>ion_name</th><th>flag_N</th><th>logN</th><th>sig_logN [2]</th><th>comment</th><th>reliability</th><th>z_sys</th><th>cgm_name</th><th>rho_impact</th></tr></thead>\n",
+       "<thead><tr><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th>1 / cm</th><th>km / s</th><th>km / s</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>kpc</th></tr></thead>\n",
+       "<thead><tr><th>str27</th><th>float64</th><th>float64</th><th>str14</th><th>int64</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>str5</th><th>int64</th><th>float64</th><th>float64</th><th>str1</th><th>str4</th><th>float64</th><th>str21</th><th>float64</th></tr></thead>\n",
+       "<tr><td>J142947.03+064334.9_z0</td><td>58.9999971028</td><td>356.300009712</td><td>SiII_z0.00000</td><td>14</td><td>2</td><td>0.0</td><td>-155.0</td><td>-99.0</td><td>SiII</td><td>1</td><td>13.2208159797</td><td>0.172163497629 .. 0.172163497629</td><td></td><td>none</td><td>0.0</td><td>J1429+0644_127_212658</td><td>6.86249122085</td></tr>\n",
+       "<tr><td>PKS2005-489_z0</td><td>-32.6000028074</td><td>350.400007884</td><td>SiII_z0.00000</td><td>14</td><td>2</td><td>0.0</td><td>99.0</td><td>206.0</td><td>SiII</td><td>1</td><td>13.0771533121</td><td>0.0358000395833 .. 0.0358000395833</td><td></td><td>none</td><td>0.0</td><td>J2009-4848_149_121802</td><td>4.45430301029</td></tr>\n",
+       "<tr><td>LBQS-1435-0134_z0</td><td>51.3999972229</td><td>348.700009891</td><td>SiII_z0.00000</td><td>14</td><td>2</td><td>0.0</td><td>-156.0</td><td>-100.0</td><td>SiII</td><td>1</td><td>12.75</td><td>0.0500000007451 .. --</td><td></td><td>none</td><td>0.0</td><td>J1437-0146_132_188213</td><td>6.32818941815</td></tr>\n",
+       "<tr><td>RBS1892_z0</td><td>-58.400002721</td><td>345.900006538</td><td>SiII_z0.00000</td><td>14</td><td>2</td><td>0.0</td><td>-115.0</td><td>-100.0</td><td>SiII</td><td>1</td><td>12.0799999237</td><td>0.209999993443 .. 0.209999993443</td><td></td><td>none</td><td>0.0</td><td>J2245-4651_142_214042</td><td>6.88991625141</td></tr>\n",
+       "<tr><td>QSO-B1435-0645_z0</td><td>47.1999973217</td><td>344.000009945</td><td>SiII_z0.00000</td><td>14</td><td>2</td><td>0.0</td><td>-137.0</td><td>-100.0</td><td>SiII</td><td>1</td><td>12.7110845167</td><td>0.100507984112 .. --</td><td></td><td>none</td><td>0.0</td><td>J1438-0658_134_177202</td><td>6.05802874288</td></tr>\n",
+       "<tr><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>0</td><td>--</td><td>0.172163497629 .. --</td><td>--</td><td>--</td><td>--</td><td>J1406+0156_121_218546</td><td>6.97705066476</td></tr>\n",
+       "<tr><td>SDSS-J135726.27+043541.4_z0</td><td>62.4999973985</td><td>340.800011333</td><td>SiII_z0.00000</td><td>14</td><td>2</td><td>0.0</td><td>-145.0</td><td>-101.0</td><td>SiII</td><td>1</td><td>12.9099998474</td><td>0.0900000035763 .. 0.0900000035763</td><td></td><td>none</td><td>0.0</td><td>J1357+0435_115_230929</td><td>7.19932312597</td></tr>\n",
+       "<tr><td>IRAS-F22456-5125_z0</td><td>-56.6000025406</td><td>338.500006155</td><td>SiII_z0.00000</td><td>14</td><td>2</td><td>0.0</td><td>100.0</td><td>157.0</td><td>SiII</td><td>1</td><td>12.2299995422</td><td>0.0799999982119 .. --</td><td></td><td>none</td><td>0.0</td><td>J2248-5111_147_213088</td><td>6.87103966991</td></tr>\n",
+       "<tr><td>HE2347-4342_z0</td><td>-69.6000024705</td><td>336.000004028</td><td>SiII_z0.00000</td><td>14</td><td>2</td><td>0.0</td><td>99.0</td><td>167.0</td><td>SiII</td><td>1</td><td>12.7983449548</td><td>0.0458025208137 .. 0.0458025208137</td><td></td><td>none</td><td>0.0</td><td>J2350-4325_141_257154</td><td>7.58355386721</td></tr>\n",
+       "<tr><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>0</td><td>--</td><td>0.172163497629 .. 0.172163497629</td><td>--</td><td>--</td><td>--</td><td>J1342+0507_107_243388</td><td>7.39678867578</td></tr>\n",
+       "<tr><td>1H-2129-624_z0</td><td>-42.5000023174</td><td>331.100006806</td><td>SiII_z0.00000</td><td>14</td><td>2</td><td>0.0</td><td>99.0</td><td>254.0</td><td>SiII</td><td>1</td><td>12.0306699245</td><td>0.0833665212963 .. 0.0833665212963</td><td></td><td>none</td><td>0.0</td><td>J2136-6226_154_179279</td><td>6.11035142494</td></tr>\n",
+       "<tr><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>0</td><td>--</td><td>0.172163497629 .. 0.172163497629</td><td>--</td><td>--</td><td>--</td><td>J1315+1525_77_283600</td><td>7.84703482209</td></tr>\n",
+       "<tr><td>SDSSJ134251.60-005345.3_z0</td><td>59.3999977592</td><td>328.800011857</td><td>SiII_z0.00000</td><td>14</td><td>2</td><td>0.0</td><td>-149.0</td><td>-100.0</td><td>SiII</td><td>1</td><td>13.2033118352</td><td>0.174667438974 .. 0.174667438974</td><td></td><td>none</td><td>0.0</td><td>J1342-0052_115_231078</td><td>7.201835228</td></tr>\n",
+       "<tr><td>HARO11_z0</td><td>-82.8000022174</td><td>328.09999272</td><td>SiII_z0.00000</td><td>14</td><td>2</td><td>0.0</td><td>-273.0</td><td>190.0</td><td>SiII</td><td>1</td><td>13.1535951342</td><td>0.0369538722817 .. 0.0369538722817</td><td></td><td>none</td><td>0.0</td><td>J0036-3335_137_302011</td><td>7.954583562</td></tr>\n",
+       "<tr><td>RXS-J00057-5007_z0</td><td>-65.4000019413</td><td>320.700003578</td><td>SiII_z0.00000</td><td>14</td><td>2</td><td>0.0</td><td>91.0</td><td>190.0</td><td>SiII</td><td>1</td><td>13.29335058</td><td>0.0416493608809 .. 0.0416493608809</td><td></td><td>none</td><td>0.0</td><td>J0005-5007_153_256349</td><td>7.57355046076</td></tr>\n",
+       "<tr><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>0</td><td>--</td><td>0.172163497629 .. 0.172163497629</td><td>--</td><td>--</td><td>--</td><td>J1309+0819_78_273810</td><td>7.7643306176</td></tr>\n",
+       "<tr><td>VV2006-J130524.3+035731_z0</td><td>66.5999984371</td><td>311.7000144</td><td>SiII_z0.00000</td><td>14</td><td>2</td><td>0.0</td><td>-174.0</td><td>-99.0</td><td>SiII</td><td>1</td><td>12.8018725091</td><td>0.11165562435 .. 0.11165562435</td><td></td><td>none</td><td>0.0</td><td>J1305+0357_85_268851</td><td>7.71575444915</td></tr>\n",
+       "<tr><td>VV2006-J125124.6+055420_z0</td><td>68.7999988443</td><td>302.900015619</td><td>SiII_z0.00000</td><td>14</td><td>2</td><td>0.0</td><td>-159.0</td><td>-99.0</td><td>SiII</td><td>1</td><td>13.4300003052</td><td>0.209999993443 .. 0.209999993443</td><td></td><td>none</td><td>0.0</td><td>J1251+0555_66_283219</td><td>7.84415030429</td></tr>\n",
+       "<tr><td>RBS144_z0</td><td>-65.8000009906</td><td>299.500002264</td><td>SiII_z0.00000</td><td>14</td><td>2</td><td>0.0</td><td>100.0</td><td>218.0</td><td>SiII</td><td>2</td><td>13.6899995804</td><td>99.99 .. 99.99</td><td></td><td>none</td><td>0.0</td><td>J0100-5116_166_282076</td><td>7.83532207266</td></tr>\n",
+       "<tr><td>HB89-0202-765_z0</td><td>-40.0000008907</td><td>297.500006137</td><td>SiII_z0.00000</td><td>14</td><td>2</td><td>0.0</td><td>100.0</td><td>334.0</td><td>SiII</td><td>2</td><td>14.5799999237</td><td>99.99 .. 99.99</td><td></td><td>none</td><td>0.0</td><td>J0203-7621_169_249426</td><td>7.48281077532</td></tr>\n",
+       "</table>"
+      ],
       "text/plain": [
-       "True"
+       "<Table masked=True length=20>\n",
+       "        abssys_name             b_gal      ...   rho_impact \n",
+       "                                 deg       ...      kpc     \n",
+       "           str27               float64     ...    float64   \n",
+       "--------------------------- -------------- ... -------------\n",
+       "     J142947.03+064334.9_z0  58.9999971028 ... 6.86249122085\n",
+       "             PKS2005-489_z0 -32.6000028074 ... 4.45430301029\n",
+       "          LBQS-1435-0134_z0  51.3999972229 ... 6.32818941815\n",
+       "                 RBS1892_z0  -58.400002721 ... 6.88991625141\n",
+       "          QSO-B1435-0645_z0  47.1999973217 ... 6.05802874288\n",
+       "                         --             -- ... 6.97705066476\n",
+       "SDSS-J135726.27+043541.4_z0  62.4999973985 ... 7.19932312597\n",
+       "        IRAS-F22456-5125_z0 -56.6000025406 ... 6.87103966991\n",
+       "             HE2347-4342_z0 -69.6000024705 ... 7.58355386721\n",
+       "                         --             -- ... 7.39678867578\n",
+       "             1H-2129-624_z0 -42.5000023174 ... 6.11035142494\n",
+       "                         --             -- ... 7.84703482209\n",
+       " SDSSJ134251.60-005345.3_z0  59.3999977592 ...   7.201835228\n",
+       "                  HARO11_z0 -82.8000022174 ...   7.954583562\n",
+       "         RXS-J00057-5007_z0 -65.4000019413 ... 7.57355046076\n",
+       "                         --             -- ...  7.7643306176\n",
+       " VV2006-J130524.3+035731_z0  66.5999984371 ... 7.71575444915\n",
+       " VV2006-J125124.6+055420_z0  68.7999988443 ... 7.84415030429\n",
+       "                  RBS144_z0 -65.8000009906 ... 7.83532207266\n",
+       "           HB89-0202-765_z0 -40.0000008907 ... 7.48281077532"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.any(np.isnan(SiII_tbl['logN']))"
+    "SiII_tbl = mwcgm.abs.ion_tbl((14,2))\n",
+    "SiII_tbl[0:20]"
    ]
   },
   {
