--- a/docs/examples/CGM_Models.ipynb
+++ b/docs/examples/CGM_Models.ipynb
@@ -4,20 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Models of the CGM (v1.0)"
+    "# Models of the CGM (v2.0)\n",
+    "    v1.0 -- Getting started\n",
+    "    v2.0 -- Correcting f(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
+    "import numpy as np\n",
     "from numpy.random import rand\n",
+    "\n",
     "from astropy import constants as const\n",
+    "from astropy import units as u\n",
     "\n",
     "from pyigm.cgm import models as cgm_models"
    ]
@@ -50,9 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -72,33 +73,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "$3.1515211 \\times 10^{45} \\; \\mathrm{g}$"
+      ],
       "text/plain": [
-       "12.2"
+       "<Quantity 3.151521149145704e+45 g>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Mass  (log10 Solar masses)\n",
+    "# DM Mass\n",
     "NFW.M_halo"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -118,10 +118,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$5.0424338 \\times 10^{44} \\; \\mathrm{g}$"
+      ],
+      "text/plain": [
+       "<Quantity 5.042433838633126e+44 g>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Baryon Mass\n",
+    "NFW.M_b"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -142,17 +164,15 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$240.56523 \\; \\mathrm{kpc}$"
+       "$240.54004 \\; \\mathrm{kpc}$"
       ],
       "text/plain": [
-       "<Quantity 240.5652260386316 kpc>"
+       "<Quantity 240.54004394961245 kpc>"
       ]
      },
      "execution_count": 7,
@@ -166,6 +186,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<Quantity 2.1702075788387873e-25 g / cm3>,\n",
+       " <Quantity 3.472332126142101e-26 g / cm3>)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NFW.rho0, NFW.rho0_b.to('g/cm**3')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -174,28 +215,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$1.0559428 \\times 10^{-27} \\; \\mathrm{\\frac{g}{cm^{3}}}$"
+       "$9.7322391 \\times 10^{-28} \\; \\mathrm{\\frac{g}{cm^{3}}}$"
       ],
       "text/plain": [
-       "<Quantity 1.0559427779408535e-27 g / cm3>"
+       "<Quantity 9.732239143903739e-28 g / cm3>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "xyz = (1-2*rand(3, 100)) * 100\n",
-    "rho = NFW.rho(xyz)\n",
+    "rho = NFW.rho_b(xyz)\n",
     "rho[0]"
    ]
   },
@@ -208,18 +247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.00047466913872507444"
+       "0.00043748518713516965"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,18 +275,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.00055379648415054437"
+       "0.00051041396783060248"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,6 +292,101 @@
    "source": [
     "ne = NFW.ne(xyz) # Also without units;  assumes\n",
     "ne[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DM Mass profile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yv = np.linspace(0.,1., 100) * NFW.c\n",
+    "fy = NFW.fy_DM(yv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2752090445410056"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NFW.fy_b(NFW.c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ne"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$199.83592 \\; \\mathrm{\\frac{pc}{cm^{3}}}$"
+      ],
+      "text/plain": [
+       "<Quantity 199.8359247542486 pc / cm3>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ne = NFW.Ne_Rperp(50*u.kpc)\n",
+    "Ne"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<Quantity 6.260543676237977e-26 g / cm3>, 0.028142497130092765)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NFW.rho_b([10,0,0]), NFW.nH([10,0,0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
    ]
   },
   {
@@ -308,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
