--- a/docs/datasets/COS_Halos_Examples.ipynb
+++ b/docs/datasets/COS_Halos_Examples.ipynb
@@ -506,7 +506,7 @@
     "### Load em up\n",
     "    This requires the files in pyigm/data/CGM/COS_Halos/Cloudy have been installed\n",
     "    See the README.md file in pyigm/data/CGM/COS_Halos/ for instructions\n",
-    "    And also the pickle file in "
+    "    And also the pickle file in pyigm/data/CGM/Cloudy  (see the README.md file there for details)"
    ]
   },
   {
