--- a/docs/datasets/COS-Halos_database.ipynb
+++ b/docs/datasets/COS-Halos_database.ipynb
@@ -79,133 +79,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J0226+0015.268_22.fits.gz\n",
-      "Skipping column contribution from 1025.72 as NG for a line; flg=2\n",
-      "Skipping column contribution from 972.537 as NG for a line; flg=2\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J0401-0540.67_24.fits.gz\n",
-      "Skipping column contribution from 1025.72 as NG for a line; flg=2\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J0803+4332.306_20.fits.gz\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J0910+1014.242_34.fits.gz\n",
-      "Skipping column contribution from 949.743 as NG for a line; flg=2\n",
-      "Skipping column contribution from 937.803 as NG for a line; flg=13\n",
-      "Skipping column contribution from 930.748 as NG for a line; flg=13\n",
-      "Skipping column contribution from 926.226 as NG for a line; flg=15\n",
-      "Skipping column contribution from 1304.37 as NG for a line; flg=10\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J0910+1014.34_46.fits.gz\n",
-      "Skipping column contribution from 1025.72 as NG for a line; flg=13\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J0914+2823.41_27.fits.gz\n",
-      "Skipping column contribution from 1190.42 as NG for a line; flg=2\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J0925+4004.196_22.fits.gz\n",
-      "Skipping column contribution from 972.537 as NG for a line; flg=2\n",
-      "Skipping column contribution from 1304.37 as NG for a line; flg=13\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J0928+6025.110_35.fits.gz\n",
-      "Skipping column contribution from 1144.94 as NG for a line; flg=10\n",
-      "Skipping column contribution from 2600.17 as NG for a line; flg=0\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J0935+0204.15_28.fits.gz\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J0943+0531.106_34.fits.gz\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J0943+0531.216_61.fits.gz\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J0943+0531.227_19.fits.gz\n",
-      "Skipping column contribution from 1200.71 as NG for a line; flg=15\n",
-      "New colm for (7,1) and sys J0943+0531_227_19 is -14.8826 different from old\n",
-      "Skipping column contribution from 1259.52 as NG for a line; flg=13\n",
-      "New colm for (16,2) and sys J0943+0531_227_19 is -15.0551 different from old\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J0950+4831.177_27.fits.gz\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1009+0713.170_9.fits.gz\n",
-      "Skipping column contribution from 949.743 as NG for a line; flg=2\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1009+0713.204_17.fits.gz\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1016+4706.274_6.fits.gz\n",
-      "Skipping column contribution from 972.537 as NG for a line; flg=2\n",
-      "Skipping column contribution from 949.743 as NG for a line; flg=2\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1016+4706.359_16.fits.gz\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1112+3539.236_14.fits.gz\n",
-      "Skipping column contribution from 1215.67 as NG for a line; flg=2\n",
-      "Skipping column contribution from 930.748 as NG for a line; flg=13\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1133+0327.110_5.fits.gz\n",
-      "Skipping column contribution from 920.963 as NG for a line; flg=13\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1133+0327.164_21.fits.gz\n",
-      "Skipping column contribution from 2796.35 as NG for a line; flg=13\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1157-0022.230_7.fits.gz\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1220+3853.225_38.fits.gz\n",
-      "Skipping column contribution from 1025.72 as NG for a line; flg=2\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1233+4758.94_38.fits.gz\n",
-      "Skipping column contribution from 977.02 as NG for a line; flg=13\n",
-      "New colm for (6,3) and sys J1233+4758_94_38 is -14.2306 different from old\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1233-0031.168_7.fits.gz\n",
-      "Skipping column contribution from 1260.42 as NG for a line; flg=6\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1241+5721.199_6.fits.gz\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1241+5721.208_27.fits.gz\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1245+3356.236_36.fits.gz\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1322+4645.349_11.fits.gz\n",
-      "Skipping column contribution from 1334.53 as NG for a line; flg=13\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1330+2813.289_28.fits.gz\n",
-      "Skipping column contribution from 1334.53 as NG for a line; flg=13\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1342-0053.157_10.fits.gz\n",
-      "New colm for (8,1) and sys J1342-0053_157_10 is 0.224041 different from old\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1342-0053.77_10.fits.gz\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1419+4207.132_30.fits.gz\n",
-      "Skipping column contribution from 1025.72 as NG for a line; flg=2"
+      "read_sets: Using set file -- \n",
+      "  /Volumes/Pegasus/Dropbox/Code/linetools/linetools/lists/sets/llist_v1.2.ascii\n",
+      "Loading abundances from Asplund2009\n",
+      "Abundances are relative by number on a logarithmic scale with H=12\n",
+      "Be patient, using /Volumes/Pegasus/Dropbox/Code/pyigm/pyigm/data/CGM/COS_Halos/cos-halos_systems.v1.2.tar.gz to load\n",
+      "Skipping a likely folder: CGM_JSON\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/xavier/local/Python/pyigm/pyigm/cgm/cos_halos.py:255: UserWarning: This module will be DEPRECATED\n",
-      "  warnings.warn(\"This module will be DEPRECATED\")\n",
-      "/Users/xavier/local/Python/linetools/linetools/analysis/absline.py:125: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  lgvar = ((1.0 / (np.log(10.0)*N))**2)*sig_N**2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1435+3604.126_21.fits.gz\n",
-      "Skipping column contribution from 949.743 as NG for a line; flg=2\n",
-      "Skipping column contribution from 930.748 as NG for a line; flg=2\n",
-      "Skipping column contribution from 926.226 as NG for a line; flg=2\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1435+3604.68_12.fits.gz\n",
-      "Skipping column contribution from 949.743 as NG for a line; flg=13\n",
-      "New colm for (8,1) and sys J1435+3604_68_12 is 0.854291 different from old\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1437+5045.317_38.fits.gz\n",
-      "Skipping column contribution from 949.743 as NG for a line; flg=4\n",
-      "Skipping column contribution from 1302.17 as NG for a line; flg=13\n",
-      "New colm for (8,1) and sys J1437+5045_317_38 is -14.6919 different from old\n",
-      "Skipping column contribution from 933.378 as NG for a line; flg=13\n",
-      "New colm for (16,6) and sys J1437+5045_317_38 is 0.255336 different from old\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1445+3428.232_33.fits.gz\n",
-      "Skipping column contribution from 937.803 as NG for a line; flg=2\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1514+3619.287_14.fits.gz\n",
-      "Skipping column contribution from 1334.53 as NG for a line; flg=13\n",
-      "New colm for (6,2) and sys J1514+3619_287_14 is -14.1747 different from old\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1550+4001.197_23.fits.gz\n",
-      "Skipping column contribution from 926.226 as NG for a line; flg=2\n",
-      "Skipping column contribution from 919.351 as NG for a line; flg=2\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1550+4001.97_33.fits.gz\n",
-      "Skipping column contribution from 1025.72 as NG for a line; flg=2\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1555+3628.88_11.fits.gz\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1617+0638.253_39.fits.gz\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1619+3342.113_40.fits.gz\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J2257+1340.270_40.fits.gz\n",
-      "Skipping column contribution from 972.537 as NG for a line; flg=2\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J2345-0059.356_12.fits.gz\n",
-      "Skipping column contribution from 972.537 as NG for a line; flg=2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/xavier/local/Python/pyigm/pyigm/cgm/cos_halos.py:212: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  if np.abs(comp.logN - float(iont['CLM'][0])) > 0.15:\n"
+      "/Volumes/Pegasus/Dropbox/Code/pyigm/pyigm/cgm/cos_halos.py:281: UserWarning: This method may be DEPRECATED\n",
+      "  warnings.warn(\"This method may be DEPRECATED\")\n"
      ]
     }
    ],
@@ -213,6 +109,51 @@
     "reload(pch)\n",
     "cos_halos = pch.COSHalos()\n",
     "cos_halos.load_mega()#test=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "abs_kin() takes exactly 2 arguments (1 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-6515d8729ce5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcos_halos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs_kin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: abs_kin() takes exactly 2 arguments (1 given)"
+     ]
+    }
+   ],
+   "source": [
+    "cos_halos.abs_kin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cos_halos.cgm_abs[0].igm_sys.kin.keys()\n"
    ]
   },
   {
@@ -243,7 +184,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -301,7 +244,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -351,7 +296,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -485,7 +432,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -514,7 +463,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -625,7 +576,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -670,7 +623,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -757,7 +712,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -790,7 +747,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -811,7 +770,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -831,7 +792,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -851,7 +814,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -889,21 +854,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
